--- a/src/style.scss
+++ b/src/style.scss
@@ -5,11 +5,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(7, 58, 187, 1) 100%
-  );
+  background: grey;
   display: flex;
   justify-content: center;
   overflow: hidden;
